# anki-mcp-ujisati

./: README.md  pyproject.toml  remove_python_comments.py
src/anki_mcp/: __init__.py  card_service.py  common.py  deck_service.py  media_service.py  model_service.py  note_service.py
tests/: test_anki_mcp.py
